- to simplify engine removed option to change native iOS splash before actual NON splash
- reduced log output to console
- fixed small bug what caused that engine was ignoring directories with name "non"
- pertially fixed require function (still do not supports package.path)
- moved installation script to tools/ and added API dumper

[0.6.4]
- fixed documentation for methods that returns multiple values
- fixed Java to Lua object binding
- added non.java module
- added support for including dependencies for repositories from mvnrepository.com
- added -d switch to cli for debug log output
- fixed out of memory error on iOS builds

[0.6.3]
- added documentation for MoonScript
- optimized rendering of loading screen
- removed automatic resizing of screen canvas (now it is resized only at game start)
- removed unused Java code
- now launcher loads version directly from VERSION file
- added non.system.getSize(), non.system.getWidth() and non.system.getHeight() to get device screen size
- added non.graphics.setSize(width, height) to change current screen size (usefull for screen cropping)
- changed non.graphics.getSize(), non.graphics.getWidth() and non.graphics.getHeight() to return current screen size

[0.6.2]
- updated LibGDX backend to v1.5.5
- updated RoboVM backend to v1.0.0
- updated Gradle Android plugin to v1.1.3
- updated Gradle Android SDK manager plugin to v0.12.0
- updated and optimized Lua backend
- added proper stacktrace to Lua backend
- fully documented entire API
- fixed defaults for "non start" and "non build"
- fixed android builds
- added non.system module and moved utility methods from non to it
- added non.compass module
- added non.files.copy(from, to, type1, type2)
- added non.files.move(from, to, type1, type2)
- added non.files.rename(from, to, type)
- added non.files.parent(file, type)
- added non.files.child(dir, child, type)
- added non.mouse.setVisible(visible) and non.mouse.isVisible()
- added non.keyboard.setVisible(visible)